# decimal

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/boost/decimal/: decimal.hpp  decimal32.hpp
include/boost/decimal/detail/: concepts.hpp  math.hpp  type_traits.hpp
include/boost/decimal/tools/: config.hpp  is_standalone.hpp
test/: CMakeLists.txt  Jamfile.v2  constructor_test.cpp  print.cpp  size_test.cpp  to_floating_point_test.cpp  to_integral_test.cpp  to_string_test.cpp  type_traits.cpp  type_traits_test.cpp  unary_arithmetic_test.cpp
